[gd_scene load_steps=4 format=3 uid="uid://cb1gwekpgb0gg"]

[ext_resource type="Script" path="res://UI/MobileInput/ButtonJump/button_jump.gd" id="1_ci1lc"]
[ext_resource type="Texture2D" uid="uid://cpgsa2d2ppnb1" path="res://UI/MobileInput/ButtonJump/JumpButton-Normal.png" id="2_krpkn"]
[ext_resource type="Texture2D" uid="uid://cw5l2nodl534d" path="res://UI/MobileInput/ButtonJump/JumpButton-Pressed.png" id="3_1bgsi"]

[node name="ButtonJump" type="Node2D"]
script = ExtResource("1_ci1lc")

[node name="ButtonJump" type="TouchScreenButton" parent="."]
texture_normal = ExtResource("2_krpkn")
texture_pressed = ExtResource("3_1bgsi")

[connection signal="pressed" from="ButtonJump" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="released" from="ButtonJump" to="." method="_on_TouchScreenButton_released"]
